# net_monitor

./: .gitignore  CMakeLists.txt
api/: rule_api.c
bpf/: ebpf_monitor.bpf.c  ebpf_monitor.bpf.h
grpc/: rule.proto  rule_client.py  rule_server.py
include/: rule_api.h
lib/: prog_helper.c  prog_helper.h  prog_loader.c  prog_loader.h  prog_stats.c  prog_stats.h  rule_helper.c  rule_helper.h
src/: loader.c  update.c
test/: test_flow_log_rx.py  test_flow_log_tx.py
